...
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="currently_working_on">"Currently working on "</string>
    <string name="team_members">Team members:</string>
    <string name="top_member">Top member %1$d</string>
    <string name="progress_header">Project progress:</string>
    <string name="progress_progress">Project progress</string>
    <string name="description_header">Project description:</string>
    <string name="description">Project description</string>
    <string name="short_description">Enter a short description</string>
    <string name="progress_percentage">%1$s%%</string>
    <string name="deadline">"Deadline: "</string>
    <string name="not_set">"Not set"</string>
    <string name="username_tag">\@%1$s</string>
    <string name="search">Search</string>
    <string name="search_something">Search Something</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="delete">Delete</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="x">X</string>
    <string name="website">Website</string>
...
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="username_placeholder">Username</string>
    <string name="bio_placeholder">Bio</string>
    <string name="add_a_bio_placeholder">Add a Bio</string>
    <string name="current_project_placeholder">Current Project</string>
    <string name="add_a_link_placeholder">Add a link</string>
    <string name="tap_to_add_a_link">Tap to add a link</string>
    <string name="update">Update</string>
    <string name="tap_to_remove">Tap to remove a link</string>
    <string name="invalid_link">Link should start with http:// or https://</string>
    <string name="mentor_for">Mentor for %1$s</string>
...
    <string name="privacy_policy">Privacy Policy</string>
    <string name="github_link">https://github.com/prasidhanchan/</string>
    <string name="x_link">https://x.com/prasidhganchan?s=09/</string>
    <string name="website_link">https://codemonk.club/</string>
    <string name="remove_member">Remove Member</string>
    <string name="add_member">Add Member</string>
    <string name="team_member">Team Member</string>
    <string name="me">me</string>
    <string name="deadline_placeholder">Deadline</string>
    <string name="deadline_date">24 Apr 2024</string>
    <string name="progress">Progress</string>
    <string name="percent">Percentage</string>
    <string name="post">Post</string>
    <string name="no_posts_yet">No posts yet!</string>
    <string name="project_post">Project Post</string>
    <string name="announcement">Announcement</string>
    <string name="feature_not_available">Feature not available yet!</string>
    <string name="dev_experience">Dev Experience</string>
    <string name="xp_points">%1$s pts</string>
    <string name="current_project_progress">Current Project Progress</string>
    <string name="other_mentors">Other mentors:</string>
...
    <string name="link">Link</string>
    <string name="edit_post">Edit Post</string>
    <string name="my_post_id">Post%1$d</string>
    <string name="mentor">Mentor:</string>
    <string name="mentor_placeholder">Mentor</string>
    <string name="monk_not_found">Monk not found!</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="notification">Notification</string>
    <string name="notification_permission_denied">Please enable the notification permission for this app to work properly.</string>
    <string name="send_notification">Send Notification</string>
    <string name="send">Send</string>
    <string name="title">Notification title</string>
    <string name="body">Notification message</string>
    <string name="notification_sent">Notification sent</string>
    <string name="no_notifications">No notifications</string>
    <string name="new_post">New Post</string>
    <string name="add_a_new_post">Add a New Post</string>
    <string name="new_announcement">New Announcement</string>
    <string name="new_post_body">%1$s has posted a new project</string>
    <string name="new_announcement_body">%1$s has made a new announcement</string>
    <string name="liked">%1$s Liked</string>
    <string name="new_like_body">%1$s has liked your post</string>
    <string name="sponsored">Sponsored</string>
...
